RESOLVED FIXED306174
[GTK] DragSource should disconnect signal handers for the GdkDrag object
https://bugs.webkit.org/show_bug.cgi?id=306174
Summary [GTK] DragSource should disconnect signal handers for the GdkDrag object
Fujii Hironori
Reported 2026-01-24 04:19:07 PST
[GTK] DragSource should disconnect signal handers for the GdkDrag object
Attachments
ASan report (11.17 KB, text/plain)
2026-01-24 04:19 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2026-01-24 04:19:46 PST
Created attachment 478120 [details] ASan report
Fujii Hironori
Comment 2 2026-01-24 04:24:53 PST
EWS
Comment 3 2026-01-25 22:42:48 PST
Committed 306186@main (cc8d0df06745): <https://commits.webkit.org/306186@main> Reviewed commits have been landed. Closing PR #57175 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-01-25 22:43:12 PST
Note You need to log in before you can comment on or make changes to this bug.