Cherry-pick 306186@main (cc8d0df06745). https://bugs.webkit.org/show_bug.cgi?id=306174

[GTK4] DragSource should disconnect signal handers of the GdkDrag object
    https://bugs.webkit.org/show_bug.cgi?id=306174

    Reviewed by Carlos Garcia Campos.

    The signal handlers have user data checks. But, ASan reported the object was
    freed.

    * Source/WebKit/UIProcess/API/gtk/DragSourceGtk4.cpp:
    (WebKit::DragSource::~DragSource):

    Canonical link: https://commits.webkit.org/306186@main

Canonical link: https://commits.webkit.org/298234.407@webkitglib/2.50